--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,8 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.24</version>
-            <optional>true</optional>
+            <version>1.18.22</version>
+            <optional>false</optional>
         </dependency>
     </dependencies>
 </project>
